    starpu_task::callback_arg_free,
    starpu_task::prologue_callback_arg_free and
    starpu_task::prologue_callback_pop_arg_free to 1 when used.
    New parameters STARPU_CALLBACK_ARG_NFREE,
    STARPU_CALLBACK_WITH_ARG_NFREE, STARPU_PROLOGUE_CALLBACK_ARG_NFREE, and
    STARPU_PROLOGUE_CALLBACK_POP_ARG_NFREE which set the corresponding
    fields of starpu_task to 0.

Small features:
  * New starpu_task_insert() and alike parameter STARPU_TASK_WORKERIDS
    allowing to set the fields starpu_task::workerids_len and
    starpu_task::workerids
  * New starpu_task_insert() and alike parameters
    STARPU_SEQUENTIAL_CONSISTENCY, STARPU_TASK_NO_SUBMITORDER and
    STARPU_TASK_PROFILING_INFO
  * New function starpu_create_callback_task() which creates and
    submits an empty task with the specified callback


StarPU 1.3.2 (git revision af22a20fc00a37addf3cc6506305f89feed940b0)
==============================================

Small changes:
  * Improve OpenMP support to detect the environment is valid before
    launching OpenMP
  * Delete old code (drivers gordon, scc, starpu-top, and plugin gcc)
    and update authors file accordingly
  * Add Heteroprio documentation (including a simple example)
  * Add a progression hook, to be called when workers are idle, which
    is used in the NewMadeleine implementation of StarPU-MPI to ensure
    communications progress.

StarPU 1.3.1 (git revision 01949488b4f8e6fe26d2c200293b8aae5876b038)
==============================================

Small features:
  * Add starpu_filter_nparts_compute_chunk_size_and_offset helper.
  * Add starpu_bcsr_filter_canonical_block_child_ops.

Small changes:
  * Improve detection of NVML availability. Do not only check the
    library is available, also check the compiled code can be run.

StarPU 1.3.0 (git revision 24ca83c6dbb102e1cfc41db3bb21c49662067062)
==============================================

New features:
  * New scheduler 'heteroprio' with heterogeneous priorities